fix tgob alignment

--- a/frontend/src/pages/TGOB.css
+++ b/frontend/src/pages/TGOB.css
@@ -103,7 +103,7 @@ li {
     display: flex;
     flex-direction: row;
     /* justify-content: space-evenly; */
-    align-items: space-evenly;
+    align-items: baseline;
 }
 
 .desc-wrapper {
